--- a/chats/locale/es/LC_MESSAGES/django.po
+++ b/chats/locale/es/LC_MESSAGES/django.po
@@ -110,6 +110,18 @@ msgstr "Perfil"
 msgid "Profiles"
 msgstr "Perfiles"
 
+#: chats/apps/ai_features/audio_transcription/enums.py:10
+msgid "Incorrect transcription"
+msgstr "Transcripción incorrecta"
+
+#: chats/apps/ai_features/audio_transcription/enums.py:11
+msgid "Incomplete transcription"
+msgstr "Transcripción incompleta"
+
+#: chats/apps/ai_features/audio_transcription/enums.py:12
+msgid "Hard to understand"
+msgstr "Difícil de entender"
+
 #: chats/apps/ai_features/history_summary/enums.py:10
 msgid "Incorrect summary"
 msgstr "Resumen incorrecto"
